# face_verification_feature_extraction_test

./: CMakeLists.txt  README.md
src/: histogram_calculate.cpp  histogram_calculate.hpp  main.cpp  points_processor.cpp  points_processor.hpp
